--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 			<div class="row">
 			<div class="col-md-8" id="timer">
-			<p>placeholder</p>
+			<p>Time Remaining: <div id="countDown"></div></p>
 			</div>
 			</div>
 
@@ -45,6 +45,8 @@
 <label class="radio-inline"><input type="radio" name="optradio">Option 2</label>
 <label class="radio-inline"><input type="radio" name="optradio">Option 3</label>
 <label class="radio-inline"><input type="radio" name="optradio">Option 3</label>
+
+<button id="start">Done!</button>
 
 	</div>
 	</div>
