Quiz questions and answers added

--- a/index.html
+++ b/index.html
@@ -34,17 +34,75 @@
 
 			<div class="row">
 			<div class="col-md-8" id="timer">
-			<p>Time Remaining: <div id="countDown"></div></p>
+			<p>Time Remaining: <span id="countDown"></span></p>
 			</div>
 			</div>
 
 			<div class="row">
 			<div class="col-md-8" id="questions">
+<p>Every week the TV Guide comes to Chandler and Joey's apartment. What name appears on the address label?</p>
+<label class="radio-inline"><input type="radio" name="optradio">Chandler Bing</label>
+<label class="radio-inline"><input type="radio" name="optradio">John Doe</label>
+<label class="radio-inline"><input type="radio" name="optradio">Ms Chanandler Bong</label>
+<label class="radio-inline"><input type="radio" name="optradio">Joey Tribiani</label>
 
-<label class="radio-inline"><input type="radio" name="optradio">Option 1</label>
-<label class="radio-inline"><input type="radio" name="optradio">Option 2</label>
-<label class="radio-inline"><input type="radio" name="optradio">Option 3</label>
-<label class="radio-inline"><input type="radio" name="optradio">Option 3</label>
+<hr>
+
+<p>What is Monica's biggest pet peeve?</p>
+<label class="radio-inline"><input type="radio" name="optradio">Animals dressed as humans.</label>
+<label class="radio-inline"><input type="radio" name="optradio">Dirty dishes left in the sink.</label>
+<label class="radio-inline"><input type="radio" name="optradio">Creaky floors.</label>
+<label class="radio-inline"><input type="radio" name="optradio">People that are too tall.</label>
+
+<hr>
+
+<p>According to Chandler, what phenomenon scares the bejesus out of him?</p>
+<label class="radio-inline"><input type="radio" name="optradio">El Nino</label>
+<label class="radio-inline"><input type="radio" name="optradio">Michael Flatley, Lord of the Dance</label>
+<label class="radio-inline"><input type="radio" name="optradio">Emojis</label>
+<label class="radio-inline"><input type="radio" name="optradio">Lady Gaga's meat dress</label>
+
+<hr>
+
+<p>What was Monica's nickname when she was a field hockey goalie?</p>
+<label class="radio-inline"><input type="radio" name="optradio">The Terminator</label>
+<label class="radio-inline"><input type="radio" name="optradio">HarMonica</label>
+<label class="radio-inline"><input type="radio" name="optradio">Batman</label>
+<label class="radio-inline"><input type="radio" name="optradio">Big Fat Goalie</label>
+
+<hr>
+
+<p>What is the name of Chandler's father's Las Vegas all-male burlesque?</p>
+<label class="radio-inline"><input type="radio" name="optradio">Bing's Boys</label>
+<label class="radio-inline"><input type="radio" name="optradio">Viva Las Gaygas</label>
+<label class="radio-inline"><input type="radio" name="optradio">Pretty Fly For a White Guy</label>
+<label class="radio-inline"><input type="radio" name="optradio">Burlesque</label>
+
+<hr>
+
+<p>What is Joey's favorite food?</p>
+<label class="radio-inline"><input type="radio" name="optradio">Pizza</label>
+<label class="radio-inline"><input type="radio" name="optradio">Meatballs</label>
+<label class="radio-inline"><input type="radio" name="optradio">Turkey</label>
+<label class="radio-inline"><input type="radio" name="optradio">Sandwiches</label>
+
+<hr>
+
+<p>Joey had an imaginary friend. What is his name and occupation?</p>
+<label class="radio-inline"><input type="radio" name="optradio">Maurice, Space Cowboy</label>
+<label class="radio-inline"><input type="radio" name="optradio">Captain Jack, Pirate</label>
+<label class="radio-inline"><input type="radio" name="optradio">Mr. Moonman, Astronaut</label>
+<label class="radio-inline"><input type="radio" name="optradio">Buddy, Professional Hugger</label>
+
+<hr>
+
+<p>EWhat is Rachel's favorite movie (not the movie she says is her favorite)?</p>
+<label class="radio-inline"><input type="radio" name="optradio">Dangerous Liasons</label>
+<label class="radio-inline"><input type="radio" name="optradio">Casablanca</label>
+<label class="radio-inline"><input type="radio" name="optradio">Weekend at Bernie's</label>
+<label class="radio-inline"><input type="radio" name="optradio">Oklahoma</label>
+
+<hr>
 
 <button id="start">Done!</button>
 
