fixed issue with photos

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
       <hr>
 
-      <img src="assets/images/friends.jpg" id="poster">
+      <img src="assets/images/friends.JPG" id="poster">
 
     </div>
 
